Fixed spacing for navbar in responsive

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -113,7 +113,7 @@
 }
 
 .bubble-navbar-ul li:hover {
-    background-image: linear-gradient(45deg, rgba(66, 108, 87, 0.29), rgba(116, 120, 145, 0.31));
+    background-image: linear-gradient(45deg, rgba(66, 108, 87, 0.29), rgba(116, 120, 145, 0.42));
     border-radius: 60px;
 }
 
