--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -4,6 +4,7 @@
         align-items: flex-start;
         gap: 30px;
         margin-bottom: 75px;
+        padding: 20px 50px;
     }
 
 
